--- a/index.html
+++ b/index.html
@@ -1,33 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
+		<link rel="stylesheet" href="./css/style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<title>Frontend Mentor | NFT preview card component</title>
+	</head>
+	<body>
+		<main class="main">
+			<div class="card">
+				<div class="card__img">
+					<img
+						class="img"
+						src="./images/image-equilibrium.jpg"
+						alt="NFT preview card"
+					/>
+				</div>
+				<div class="card__body">
+					<h1 class="card__title">Equilibrium #3429</h1>
+					<p class="card__paragraph">
+						Our Equilibrium collection promotes balance and calm.
+					</p>
+					<div class="card__data">
+						<div class="card__data--coin">
+							<img src="./images/icon-ethereum.svg" alt="icon-ethereum" />
+							0.041 ETH
+						</div>
+						<div class="card__data--date">
+							<img src="./images/icon-clock.svg" alt="" />
+							3 days left
+						</div>
+					</div>
+					<div class="card__attribution">
+						<img
+							class="img-profile"
+							src="./images/image-avatar.png"
+							alt="image-avatar"
+						/>
+						<p>Creation of <span class="name">Jules Wyvern</span></p>
+					</div>
+				</div>
+			</div>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+			<div class="attribution">
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="#">Your Name Here</a>.
+			</div>
+		</main>
+	</body>
 </html>
