--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		<main class="main">
 			<div class="card">
 				<div class="card__img">
+					<div class="card__view">
+						<img class="view" src="./images/icon-view.svg" alt="icon-view" />
+					</div>
 					<img
 						class="img"
 						src="./images/image-equilibrium.jpg"
@@ -59,9 +62,14 @@
 
 			<div class="attribution">
 				Challenge by
-				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				<a
+					href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U"
+					target="_blank"
 					>Frontend Mentor</a
-				>. Coded by <a href="#">Your Name Here</a>.
+				>. Coded by
+				<a href="https://github.com/EngelReyes23" target="_blank"
+					>EngelReyes23</a
+				>.
 			</div>
 		</main>
 	</body>
